Some a11y resource missing.

--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/Bundle.properties
@@ -16,6 +16,7 @@ ACSD_upButton=n/a
 ACSD_removeButton=n/a
 ACSD_attrTable=n/a
 ACSN_attrTable=n/a
+ACSD_downButton=n/a
 
 # a11y - TreeAttlistDeclAttributeListCustomizer
 ACSD_TreeAttlistDeclAttributeListCustomizer=n/a
@@ -100,3 +101,5 @@ LBL_nodeType=Node Type
 
 ## TreeNodeFilterEditor.java
 LBL_nodeFilter=Node Filter
+
+
