bugfix a11y in ShorcutEditor

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -430,6 +430,11 @@ ACS_ShortcutsPanel.addButton.text.a11yDesc=Add New Shortcuts for Actions
 ACS_ShortcutsPanel.removeButton.text.a11yDesc=Remove Shortcuts for Actions
 ACS_ActionsPanel.ShortcutLabel.a11yName=Fill Shorcut
 ACS_ActionsPanel.ShortcutLabel.a11yDesc=Fill Shorcut by Keys combination
+ACSN_ActionsPanel.actionsTree=N/A
+ACSN_ActionsPanel.shorcutsList=N/A
+ACSD_ActionsPanel.actionsTree=N/A
+ACSD_ActionsPanel.shorcutsList=N/A
+ACSD_ShortcutsEditor.DialogDesc=N/A
 
 # {0} = name of the action already bound to the new shortcut
 FMT_ActionsPanel.AlreadyBound=There is already an action bound to this shortcut ({0}).\nDo you want to use the newly selected action instead?
