--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -146,6 +146,7 @@ CTL_ConfigureShortcuts_Title=Keyboard Shortcuts
 #OptionsAction
 Options=&Options...
 CTL_close_button=Close
+CTL_help_button=Help
 
 #SettingsAction
 Settings=Se&ttings...
