--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -32,6 +32,7 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="genjavadoc" classname="org.netbeans.nbbuild.GenerateJavadoc" classpath="${nbext_root}/nbantext.jar"/>
+    <taskdef name="for-each" classname="org.netbeans.nbbuild.ForEach" classpath="${nbext_root}/nbantext.jar"/>
 
     <property name="build.compiler.debug" value="on"/>
 
@@ -61,6 +62,8 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="${core_root}/src/"/>
             </classpath>
         </javac>
+
+        <for-each locations="compat"/>
     </target>
 
     <target name="jars" depends="init,compile">
@@ -72,6 +75,7 @@ Microsystems, Inc. All Rights Reserved.
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
+            <fileset dir="compat/src" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
         </locjar>    
     </target>
@@ -111,6 +115,8 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="../xml-text-edit.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
+
+        <for-each locations="compat"/>
     </target>
 
     <target name="all" depends="clean,nbm"/>
