Accessibility: Message type is part of dialog accessible description.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -263,6 +263,14 @@ ACS_CLOSED_OPTION_DESC=Close button
 ACS_HELP_OPTION_NAME=Help
 ACS_HELP_OPTION_DESC=Help button
 
+# NbPresenter accessible descrition
+# {0} = description of the message
+ACSD_ErrorMessage=Error: {0}
+ACSD_PlainMessage={0}
+ACSD_QuestionMessage=Question: {0}
+ACSD_InformationMessage=Information: {0}
+ACSD_WarningMessage=Warning: {0}
+
 #NbWindowManager
 CTL_MultiModeName=Multi-Tab View {0,number,integer}
 
