added workaround for bug in javac 1.3

--- a/openide/test/build.xml
+++ b/openide/test/build.xml
@@ -361,6 +361,7 @@ Microsystems, Inc. All Rights Reserved.
                deprecation="${build.compiler.deprecation}"
                debug="${build.compiler.debug}">
             <classpath>
+	        <pathelement location="../openide-13javac-workaround.jar"/>
                 <pathelement location="../src"/>
                 <pathelement path="${junit.path}"/>
 		<pathelement path="${xerces.path}"/>
@@ -370,6 +371,7 @@ Microsystems, Inc. All Rights Reserved.
                deprecation="${build.compiler.deprecation}"
                debug="${build.compiler.debug}">
             <classpath>
+	        <pathelement location="../openide-13javac-workaround.jar"/>
                 <pathelement location="../src"/>
                 <pathelement path="${junit.path}"/>
 		<pathelement path="${xerces.path}"/>
