--- a/diff/build.xml
+++ b/diff/build.xml
@@ -19,8 +19,12 @@ Microsystems, Inc. All Rights Reserved.
   <property name="binroot" location="../../nbextra"/>
   <property name="nbext" value="${nbroot}/nbbuild"/>
   <property name="nbm_alias" value="nb_ide"/>
+  <property name="homepage.base" value="netbeans.org"/>
+  <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
+  <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext}/nbantext.jar"/>
+  <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <!-- <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="${nbext}/nbantext.jar"/> -->
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="makelayer" classname="org.netbeans.nbbuild.MakeLayer" classpath="${nbext}/nbantext.jar"/>
@@ -53,18 +57,17 @@ Microsystems, Inc. All Rights Reserved.
     </locjar>
   </target>
 
-  <target name="netbeans" depends="jars"/>
+  <target name="netbeans" depends="jars">
+    <genlist targetname="nbm" outputfiledir="../nbbuild/netbeans"/>
+  </target>
 
   <target name="nbm" depends="netbeans">
-    <makenbm file="vcsgen.nbm"
+    <makenbm file="diff.nbm"
              topdir="."
-	     manifest="manifest-subst.mf"
+	     module="netbeans/modules/diff.jar"
 	     homepage="http://${homepage.base}/diff.html"
 	     distribution="${dist.base}/diff.nbm">
       <license file="${license.file}"/>
-      <description>
-        Diff module
-      </description>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
   </target>
