--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -9,6 +9,13 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+# Manifest
+
+OpenIDE-Module-Name=Diff
+OpenIDE-Module-Display-Category=Tools
+OpenIDE-Module-Short-Description=Provides the diff action to view file differences.
+OpenIDE-Module-Long-Description=The Diff module provides an action, that is enabled when two files are selected in the IDE. It is based on an external diff utility, that is executed to obtain the differences, which are then shown to the user graphically.
+
 CTL_DiffActionName=Diff
 CTL_DiffSettings=Diff Settings
 
