added workaround for javac 1.3 bug

--- a/o.n.core/test/build.xml
+++ b/o.n.core/test/build.xml
@@ -367,6 +367,7 @@ Microsystems, Inc. All Rights Reserved.
                debug="${build.compiler.debug}">
             <classpath>
                 <pathelement location="../src"/>
+		<pathelement location="../../openide/openide-13javac-workaround.jar"/>		
                 <fileset dir="../../openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
