--- a/junit/build.xml
+++ b/junit/build.xml
@@ -16,10 +16,11 @@ Microsystems, Inc. All Rights Reserved.
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
 
-  <property name="binroot" value="../../nbextra" />
-  <property name="build.compiler.deprecation" value="off" />
-  <property name="build.compiler.debug" value="off" />
-  <property name="build.compiler.debug" value="off" />
+  <property name="binroot" location="../../nbextra"/>
+  <property name="xtest.extra.home" location="${binroot}/xtest"/>
+
+  <property name="build.compiler.deprecation" value="off"/>
+  <property name="build.compiler.debug" value="off"/>  
 
   <property name="module.license.file" location="../nbbuild/standard-nbm-license.txt"/>
   <property name="junit.license.file" location="ibm-public-license.txt"/>
@@ -30,7 +31,7 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
         <!-- Since junit.jar is not included in extra binaries, use the one in xtest dir -->
 	<!-- <pathelement location="${binroot}/junit/release/lib/ext/junit.jar"/> -->
-	<pathelement location="../xtest/lib/junit.jar"/>
+	<pathelement location="${xtest.extra.home}/lib/junit.jar"/>
       </classpath>
     </javac>
   </target>
