--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -18,11 +18,11 @@ Microsystems, Inc. All Rights Reserved.
     <property name="tax_root" location="../tax"/>
     <property name="core_root" location="../core"/>
 
-    <property name="nb_root" location="${xml_root}/../../nb_all"/>
-    <property name="bin_root" location="${xml_root}/../../nbextra"/>
-    <property name="nbext_root" location="${nb_root}/nbbuild"/>
+    <property name="nbroot" location="${xml_root}/.."/>
+    <property name="binroot" location="${nbroot}/../nbextra"/>
+    <property name="nbext_root" location="${nbroot}/nbbuild"/>
 
-    <property name="license.file" location="${nb_root}/nbbuild/standard-nbm-license.txt"/>
+    <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
     <property name="storepass" value="?"/>
@@ -51,13 +51,13 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compiling XML text-edit module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
-                <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
-                <fileset dir="${nb_root}/openide/netbeans/lib">
+                <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
+                <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
-                <pathelement location="${nb_root}/editor/netbeans/modules/ext/nb-editor.jar"/>
-                <pathelement location="${nb_root}/editor/netbeans/modules/editor.jar"/>
-        	<pathelement location="${bin_root}/core/release/lib/ext/xerces.jar"/>  <!-- DOM -->
+                <pathelement location="${nbroot}/editor/netbeans/modules/ext/nb-editor.jar"/>
+                <pathelement location="${nbroot}/editor/netbeans/modules/editor.jar"/>
+        	<pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>  <!-- DOM -->
                 <pathelement location="${tax_root}/libsrc/"/>
                 <pathelement location="${core_root}/src/"/>
             </classpath>
@@ -74,8 +74,8 @@ Microsystems, Inc. All Rights Reserved.
         <locjar jarfile="netbeans/modules/xml-text-edit.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
-            <fileset dir="src" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
-            <fileset dir="compat/src" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
+            <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
+            <fileset dir="compat/src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
         </locjar>    
     </target>
@@ -125,7 +125,7 @@ Microsystems, Inc. All Rights Reserved.
         <delete dir="javadoc"/>
         <mkdir dir="javadoc"/>
         <genjavadoc destdir="javadoc" modules="openide,xml/text-edit">
-            <topdir path="${nb_root}"/>
+            <topdir path="${nbroot}"/>
         </genjavadoc>
     </target>
 
