--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -17,13 +17,13 @@ Microsystems, Inc. All Rights Reserved.
     <property name="xml_root" location=".."/>
     <property name="tax_root" location="../tax"/>
 
-    <property name="nb_root" location="${xml_root}/../../nb_all"/>
-    <property name="bin_root" location="${xml_root}/../../nbextra"/>
-    <property name="nbext_root" location="${nb_root}/nbbuild"/>
+    <property name="nbroot" location="${xml_root}/.."/>
+    <property name="binroot" location="${nbroot}/../nbextra"/>
+    <property name="nbext_root" location="${nbroot}/nbbuild"/>
 
-    <property name="parserimpl" value="${bin_root}/xml/tax/release/modules/ext/xerces2.jar"/> <!-- parser implementation used internally by module -->
+    <property name="parserimpl" value="${binroot}/xml/tax/release/modules/ext/xerces2.jar"/> <!-- parser implementation used internally by module -->
 
-    <property name="license.file" location="${nb_root}/nbbuild/standard-nbm-license.txt"/>
+    <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
     <property name="storepass" value="?"/>
@@ -51,11 +51,11 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="Compiling XML core module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
-                <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
-                <fileset dir="${nb_root}/openide/netbeans/lib">
+                <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
+                <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
-                <pathelement location="${nb_root}/openidex/netbeans/modules/autoload/openidex.jar"/>
+                <pathelement location="${nbroot}/openidex/netbeans/modules/autoload/openidex.jar"/>
                 <pathelement location="${parserimpl}"/>
                 <pathelement location="${tax_root}/libsrc/"/>
             </classpath>
@@ -70,7 +70,7 @@ Microsystems, Inc. All Rights Reserved.
         <locjar jarfile="netbeans/modules/xml-core.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
-            <fileset dir="src" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
+            <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
         </locjar>    
     </target>
@@ -118,7 +118,7 @@ Microsystems, Inc. All Rights Reserved.
         <delete dir="javadoc"/>
         <mkdir dir="javadoc"/>
         <genjavadoc destdir="javadoc" modules="openide,xml/core">
-            <topdir path="${nb_root}"/>
+            <topdir path="${nbroot}"/>
         </genjavadoc>
     </target>
 
