The Diff Settings moved to the right folder in Options.

--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -16,6 +16,8 @@ OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Short-Description=Provides the diff action to view file differences.
 OpenIDE-Module-Long-Description=The Diff module provides an action, that is enabled when two files are selected in the IDE. It is based on an external diff utility, that is executed to obtain the differences, which are then shown to the user graphically.
 
+Services/org-netbeans-modules-diff-DiffSettings.settings=Diff Settings
+
 CTL_DiffActionName=Diff
 CTL_DiffSettings=Diff Settings
 
