Typo in message

--- a/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
@@ -94,7 +94,7 @@ LBL_ConvertToServletAction=Mark as Servlet
 MSG_ConvertToServletQuestion=Mark a general Java source file {0} as a Servlet source file?
 MSG_ConvertToJavaQuestion=Unmark a servlet file {0} so it is a general Java source file?
 LBL_ConvertToJavaAction=Cancel Servlet
-MSG_CannotConvertToServlet=File {0} cannot be converted to servlet. It doesn't implement javax.servlet.Servlet interface.
+MSG_CannotConvertToServlet=File {0} cannot be converted to servlet. It doesn''t implement javax.servlet.Servlet interface.
 
 PROP_item_name=Web Module
 HINT_item_name=Name of web module
